gcc/testsuite/gdc.test/compilable/imports/test11563core_bitop.d
module test11563core_bitop;
