gcc/testsuite/gdc.test/fail_compilation/imports/a17630.d
module a17630;

import b17630;
